Hide prediction type selector.

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
         </select>
 
         {# Dropdown with prediction type #}
-        <label for="predictionType">Prediction Type:</label>
-        <select id="predictionType" name="predictionType" disabled>
+        <label hidden for="predictionType">Prediction Type:</label>
+        <select hidden id="predictionType" name="predictionType" disabled>
             <option value="ekman" selected>Go Emotions Ekman (6 base emotions + neutral)</option>
 {#            <option value="normal">Go Emotions (26 base emotions + neutral)</option>#}
         </select>
