Make LV chart layout default.

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
     <hr>
     <label for="chartOption">Layout:</label>
     <select id="chartOption" name="chartOption" onchange="updateCharts(this.value)">
-        <option value="all" selected>All Charts</option>
-        <option value="lv">LV Charts</option>
+        <option value="all">All Charts</option>
+        <option value="lv" selected>LV Charts</option>
         <option value="ru">RU Charts</option>
         <option value="totals">Totals Only</option>
     </select>
