--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     </select>
     <div id="layoutConfig" style="display: none;">
         <label for="compactLayoutCheckbox">Compact Layout:</label>
-        <input id="compactLayoutCheckbox" type="checkbox" name="compactLayoutCheckbox" value="1" checked onchange="applyCompactMode()">
+        <input id="compactLayoutCheckbox" type="checkbox" name="compactLayoutCheckbox" value="1" onchange="applyCompactMode()">
     </div>
     <div id="charts" class="flex-container">
         <div class="chart chart-title">LV Comments</div>
