--- a/static/css/main.css
+++ b/static/css/main.css
@@ -82,6 +82,10 @@
 
     @media (min-width: 1200px) {
         max-width: 70%;
+
+        #predictedCommentsTable {
+            width: 95%;
+        }
     }
 }
 
