--- a/templates/index.html
+++ b/templates/index.html
@@ -96,10 +96,9 @@
             <div id="predictedCommentsTable" class="tabulator-table"></div>
         </div>
         <div class="keyword-container">
-            <div>
+            <div style="margin-bottom: 5px;">
                 <h2>Keywords</h2>
                 <i>Note: Keywords are automatically extracted from comments. They may be unrelated to the content of the corresponding articles.</i>
-                <i>In the case of many comments, processing time can take up to few minutes</i>
             </div>
             <div id="emotionKeywordsTable" class="tabulator-table"></div>
         </div>
