--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,20 @@
         <label for="compactLayoutCheckbox">Compact Layout:</label>
         <input id="compactLayoutCheckbox" type="checkbox" name="compactLayoutCheckbox" value="1" checked onchange="applyCompactMode()">
     </div>
+    <div class="loading-spinners">
+       <div class="loading-spinner">
+            <div class="spinner-border text-primary"></div>
+        </div>
+       <div class="loading-spinner">
+            <div class="spinner-border text-primary"></div>
+        </div>
+       <div class="loading-spinner">
+            <div class="spinner-border text-primary"></div>
+        </div>
+       <div class="loading-spinner">
+            <div class="spinner-border text-primary"></div>
+        </div>
+    </div>
     <div id="charts" class="chart-flex-container">
         <div class="chart chart-title">LV Comments</div>
         <div class="chart chart-title">RU Comments</div>
