Adjust historical event names.

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,11 +49,11 @@
     <div id="historicalEvents">
         <button type="button" class="date-range-btn" data-start="2020-01" data-end="2022-02">
             COVID-19 pandemic<br>
-            2020-01-01 to 2022-02-05
+            Jan 2020 to Feb 2022
         </button>
         <button type="button" class="date-range-btn" data-start="2022-07" data-end="2024-07">
             Russian invasion of Ukraine<br>
-            2022-07-05 to 2024-08-02
+            Feb 2022 to Jul 2024
         </button>
     </div>
     <hr>
