Adjust text in keyword note section.

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
         <div class="keyword-container">
             <div style="margin-bottom: 5px;">
                 <h2>Keywords</h2>
-                <i>Note: Keywords are automatically extracted from comments. They may be unrelated to the content of the corresponding articles.</i>
+                <i>Note: Keywords are automatically extracted from comments.</i>
             </div>
             <div id="emotionKeywordsTable" class="tabulator-table"></div>
         </div>
