--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,18 @@
     <link rel="stylesheet" href="/static/modules/tabulator/dist/css/tabulator.min.css">
     <link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body style="padding: 20px; margin: 0 30px;">
-    <h1>Barometrs 2: Internet Emotion Index</h1>
+<body style="padding: 30px 20px; margin: 0 30px;">
+    <div class="header">
+        <h1>Barometrs 2: Internet Emotion Index</h1>
+        <div class="header-logos">
+            <div class="imcs-logo">
+                <img src="/static/images/imcs_logo.png" alt="IMCS Logo">
+            </div>
+            <div class="rsu-logo">
+                <img src="/static/images/rsu_logo.png" alt="RSU Logo">
+            </div>
+        </div>
+    </div>
     <hr>
     <h3>Statistics for a selected period</h3>
     <form id="analysisRequestForm">
