Add footer to the landing page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,10 @@
             <div id="emotionKeywordsTable" class="tabulator-table"></div>
         </div>
     </div>
+    <hr>
+    <div class="footer" style="margin: 40px 0 30px; font-size: 1rem; text-align: center; padding: 0 20%;">
+        This work is funded by the EU Recovery and Resiliance Facility investment and the National Development Plan:<br> Language Technology Initiative (grant No. 2.3.1.1.i.0/1/22/I/CFLA/002).
+    </div>
 
 
 {#    <h2>Articles</h2>#}
